--- a/monopalace/src/www/inc/_head.html
+++ b/monopalace/src/www/inc/_head.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>e-dien</title>
+    <title>모노팰리스</title>
 
     <meta name="title" content="e-dien">
     <meta name="author" content="e-dien">
@@ -39,18 +39,19 @@
 
     <!-- http://static.entv.co.kr/dien -->
     <!-- fonts -->
-    <link rel="stylesheet" href="/static/fonts/notosanskr/notosanskr.css">
-    <link rel="stylesheet" href="/static/fonts/nanumgothic/nanumgothic.css">
+    <link rel="stylesheet" href="../static/fonts/notosanskr/notosanskr.css">
+    <link rel="stylesheet" href="../static/fonts/nanumgothic/nanumgothic.css">
     <!-- css -->
-    <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet" href="/static/fonts/mdi/css/materialdesignicons.min.css">
-    <!-- <link rel="stylesheet" href="/static/css/libs/slick/slick.css">
-    <link rel="stylesheet" href="/static/css/libs/slick/slick-theme.css"> -->
-    <!-- <link rel="stylesheet" href="/static/css/common.min.css"> -->
-    <!-- <link rel="stylesheet" href="/static/css/contents.min.css"> -->
-    <link rel="stylesheet" href="/static/css/landing.min.css">
+    <link rel="stylesheet" href="../static/css/reset.css">
+    <link rel="stylesheet" href="../static/fonts/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="../static/css/libs/slick/slick.css">
+    <link rel="stylesheet" href="../static/css/libs/slick/slick-theme.css"> -->
+    <!-- <link rel="stylesheet" href="../static/css/common.min.css"> -->
+    <!-- <link rel="stylesheet" href="../static/css/contents.min.css"> -->
+    <link rel="stylesheet" href="../static/css/libs/prettyPhoto.css">
+    <link rel="stylesheet" href="../static/css/landing.min.css">
 
-    <script type="text/javascript" src="/static/js/libs/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/libs/jquery-1.12.1.min.js"></script>
 
 </head>
 
