--- a/monopalace/src/m/inc/_head.html
+++ b/monopalace/src/m/inc/_head.html
@@ -39,19 +39,19 @@
 
     <!-- http://static.entv.co.kr/dien -->
     <!-- fonts -->
-    <link rel="stylesheet" href="../static/fonts/notosanskr/notosanskr.css">
-    <link rel="stylesheet" href="../static/fonts/nanumgothic/nanumgothic.css">
+    <link rel="stylesheet" href="/static/fonts/notosanskr/notosanskr.css">
+    <link rel="stylesheet" href="/static/fonts/nanumgothic/nanumgothic.css">
     <!-- css -->
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/fonts/mdi/css/materialdesignicons.min.css">
-    <!-- <link rel="stylesheet" href="../static/css/libs/slick/slick.css">
-    <link rel="stylesheet" href="../static/css/libs/slick/slick-theme.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/common.min.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/contents.min.css"> -->
-    <link rel="stylesheet" href="../static/css/libs/prettyPhoto.css">
-    <link rel="stylesheet" href="../static/css/landing.min.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/fonts/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="/static/css/libs/slick/slick.css">
+    <link rel="stylesheet" href="/static/css/libs/slick/slick-theme.css"> -->
+    <!-- <link rel="stylesheet" href="/static/css/common.min.css"> -->
+    <!-- <link rel="stylesheet" href="/static/css/contents.min.css"> -->
+    <link rel="stylesheet" href="/static/css/libs/prettyPhoto.css">
+    <link rel="stylesheet" href="/static/css/m/landing.min.css">
 
-    <script type="text/javascript" src="../static/js/libs/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/libs/jquery-1.12.1.min.js"></script>
 
 </head>
 
