--- a/monopalace/src/m/landing/inquiry.html
+++ b/monopalace/src/m/landing/inquiry.html
@@ -3,17 +3,23 @@
 <header class="landing-header">
     <div id="gnb" class="gnb">
         <div class="group-f gnb-area">
-            <h1 id="logo-cover" class="logo-cover">
-                <a href="/" class="logo">
-                    <img src="/img/landing/inquiry/logo.png" alt="모노팰리스" class="logo-img">
+            <div class="logo-bar">
+                <h1 id="logo-cover" class="logo-cover">
+                    <a href="/" class="logo">
+                        <img src="/img/landing/inquiry/logo.png" alt="모노팰리스" class="logo-img">
+                    </a>
+                </h1>
+                <a href="tel:041-585-0003" class="tel">
+                    <img src="/img/m/landing/inquiry/inquiry_number.png" alt="분양문의 041 585 0003">
                 </a>
-            </h1>
+            </div>
+
 
             <div id="navBar" class="nav-bar">
                 <nav id="mainNav" class="main-nav">
                     <h1 class="sr-only">메인메뉴</h1>
                     <ul class="menu cf">
-                        <li>
+                        <li class="on">
                             <a href="#scroll_intro">상품소개</a>
                         </li>
                         <li>
@@ -33,11 +39,25 @@
                         </li>
                     </ul>
                 </nav>
+                <button type="button" class="ap-reset allmenu-toggle-btn">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </button>
+                <div class="allmenu">
+                    <a href="#scroll_intro">상품소개</a>
+                    <a href="#scroll_income">분양/임대수익</a>
+                    <a href="#scroll_place">프리미엄 입지환경</a>
+                    <a href="#scroll_type">타입 및 특화시설</a>
+                    <a href="#scroll_plan">지역개발호재</a>
+                    <a href="#scroll_location">오시는 길</a>
+                    <a href="javascript:;" class="close-btn" onclick="console.log('work')">
+                        <span class="x">&times;</span>
+                        <span class="txt">닫기</span>
+                    </a>
+                </div>
             </div>
         </div>
-        <button type="button" class="ap-reset inquiry-tab focus-no" data-toggle="modal" data-target="inquiry-modal" aria-label="문의하기 토글버튼">
-            온라인 문의하기
-        </button>
     </div>
 </header>
 
@@ -590,87 +610,24 @@
 </main>
 <!-- /.main.container -->
 
-<div id="footer" class="landing-footer cf">
-    <div id="f_contents" class="cf">
-        <h2><img src="http://img.monopalace.com/footer_logo.gif" alt="모노팰리스"></h2>
-        <p class="address">
-
-            <span class="tel">임대입주문의 041)585-0003 | 충청남도 아산시 온천동 74-5번지<a href="/home/inquiry/" title="임대예약"><img src="http://img.monopalace.com/reser_btn.gif" alt="임대예약" style="margin-top:-2px;margin-left:5px"></a></span><br>
-            대표이사 박기범 | 사업자등록번호 220-87-30865 | TEL 02)6255-3013 | FAX 041)545-0545<br>
-            서울특별시 강남구 테헤란로82길 15, 14층(대치동, 디아이타워) | E-mail <a href="mailto:monopalace@ebiznetworks.co.kr">monopalace@ebiznetworks.co.kr</a><br>
-
-            COPYRIGHT 2014 BY <span class="footer_mono">MONOPALACE</span> CO.,LTD ALL RIGHTS RESERVED. <br>
-
-            <img src="http://img.monopalace.com/footer_text.gif" alt="본 홈페이지에 사용된 투시도 및 이미지 등은 소비자의 이해를 돕기 위한 이미지 컷으로 차이가 있습니다. 하자 등에 대한 피해보상은 주택업 관련 규정에 따라 적용됩니다.">
-        </p>
-        <h3><a href="http://www.ebiznetworks.co.kr/" target="_blank" title="이비즈네트웍스"><img src="http://img.monopalace.com/ebiz_logo.gif" alt="이비즈네트웍스"></a>
-
-        </h3>
-        <!---------------------------family --------------------------->
-        <div id="family_site">
-            <div class="fam_btn_m" style="width:120px; padding:0;">
-                <a href="javascript:;" onclick="$('#family_list').toggle()">
-                    &nbsp;Family Site&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▲
-                </a>
-            </div>
-            <ul id="family_list" style="width: 120px; display: none;" class="">
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 부동산 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.monotower.com/" target="_blank">모노타워</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><b style="color:#ff0000">모노팰리스</b></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://partners.monopalace.com" target="_blank">모노팰리스 파트너스</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.enasset.co.kr" target="_blank">이엔자산개발</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ditower.co.kr" target="_blank">DI타워</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.onbiz.co.kr/" target="_blank">온비즈 오피스</a></div>
-                </li>
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 커머스 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.nurisoop.co.kr" target="_blank">누리숲</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.entv.co.kr" target="_blank">이엔티비</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ssenflower.co.kr" target="_blank">쎈플라워</a></div>
-                </li>
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 서비스 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ancamera.co.kr/home/download_01.html" target="_blank">안카메라</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ancamera.co.kr/home/download_02.html" target="_blank">안캠코더</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.startools.co.kr" target="_blank">별툴즈</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.badakencoder.com" target="_blank">바닥툴즈</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.pcclear.co.kr" target="_blank">피씨클리어</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ebiznetworks.co.kr" target="_blank">이비즈네트웍스</a></div>
-                </li>
-            </ul>
-        </div>
-        <!---------------------------family --------------------------->
+<div class="landing-footer cf">
+    <div class="tel-bar">
+        <a href="tel:041-585-0003">
+            분양문의 <em class="fw-b">041)585-0003</em>
+        </a>
+    </div>
+    <div class="footer-area">
+        <address class="address">
+            충청남도 아산시 온천동 74-5번지<br>
+            대표이사 박기범 | (주)이비즈네트웍스<br>
+            사업자등록번호 220-87-30865<br>
+            TEL 02)6255-3013 | FAX 041)545-0545<br>
+            서울특별시 강남구 테헤란로82길 15, 14층(대치동, 디아이타워)<br>
+            E-mail monopalace@ebiznetworks.co.kr<br>
+        </address>
+        <small class="copyright">
+            COPYRIGHT 2014 BY <span class="c-brown">MONOPALACE</span> CO.,LTD ALL RIGHTS RESERVED.
+        </small>
     </div>
 </div>
 
