--- a/monopalace/src/www/inc/_head.html
+++ b/monopalace/src/www/inc/_head.html
@@ -49,7 +49,7 @@
     <!-- <link rel="stylesheet" href="../static/css/common.min.css"> -->
     <!-- <link rel="stylesheet" href="../static/css/contents.min.css"> -->
     <link rel="stylesheet" href="../static/css/libs/prettyPhoto.css">
-    <link rel="stylesheet" href="../static/css/landing.min.css">
+    <link rel="stylesheet" href="../static/css/landing/contents.min.css">
 
     <script type="text/javascript" src="../static/js/libs/jquery-1.12.1.min.js"></script>
 
