--- a/monopalace/src/m/landing/inquiry.html
+++ b/monopalace/src/m/landing/inquiry.html
@@ -130,7 +130,7 @@
                     </tr>
                     <tr>
                         <th>건축규모</th>
-                        <td>주거시설: 지상 3층 ~ 지상 15층 / 상업시설: 지하 1층 ~ 지상 2층</td>
+                        <td>주거시설: 지상 3층 ~ 지상 15층 /<br> 상업시설: 지하 1층 ~ 지상 2층</td>
                     </tr>
                     <tr>
                         <th>세대정보</th>
@@ -675,7 +675,7 @@
         <img src="http://img.monopalace.com/m/landing/inquiry/bottombar_title.png" alt="5년간 임대수익보장!" class="bar-title">
     </div>
     <div class="number-area">
-        <img src="http://img.monopalace.com/m/landing/inquiry/bottombar_inquiry_number.png" alt="분양문의 041 585 0003">
+        <a href="tel:041-585-0003"><img src="http://img.monopalace.com/m/landing/inquiry/bottombar_inquiry_number.png" alt="분양문의 041 585 0003"></a>
     </div>
 </div>
 
