--- a/monopalace/src/m/landing/inquiry.html
+++ b/monopalace/src/m/landing/inquiry.html
@@ -24,10 +24,10 @@
                                 <a href="#scroll_intro">상품소개</a>
                             </li>
                             <li>
-                                <a href="#scroll_income">분양/임대수익</a>
+                                <a href="#scroll_place">프리미엄 입지환경</a>
                             </li>
                             <li>
-                                <a href="#scroll_place">프리미엄 입지환경</a>
+                                <a href="#scroll_income">임대수익</a>
                             </li>
                             <li>
                                 <a href="#scroll_type">타입 및 특화시설</a>
@@ -48,7 +48,7 @@
                     <div class="allmenu" id="allmenu" style="display: none">
                         <div class="menu-list">
                             <a href="#scroll_intro" class="on">상품소개</a>
-                            <a href="#scroll_income">분양/임대수익</a>
+                            <a href="#scroll_income">임대수익</a>
                             <a href="#scroll_place">프리미엄 입지환경</a>
                             <a href="#scroll_type">타입 및 특화시설</a>
                             <a href="#scroll_plan">지역개발호재</a>
@@ -249,7 +249,7 @@
             </div>
             <div class="banner-content group-f">
                 <p><i>망설일 이유 없는 확실한 투자처!</i></p>
-                <p><span class="c-blue">월세수익 연 500만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,500만원 지급 보증</span></p>
+                <p><span class="c-blue">월세수익 연 480만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,400만원 지급 보증</span></p>
             </div>
         </div>
     </section>
@@ -657,12 +657,11 @@
     </div>
     <div class="footer-area">
         <address class="address">
-            충청남도 아산시 온천동 74-5번지<br>
-            대표이사 박기범 | (주)이비즈네트웍스<br>
-            사업자등록번호 220-87-30865<br>
-            TEL 02)6255-3013 | FAX 041)545-0545<br>
+            <p class="inquiry c-brown">
+                상담문의 041)585-0003 I 충청남도 아산시 온천동 74-5번지
+            </p>
+            대표이사 박기범 I (주)이비즈네트웍스 I 사업자등록번호 220-87-30865<br>
             서울특별시 강남구 테헤란로82길 15, 14층(대치동, 디아이타워)<br>
-            E-mail monopalace@ebiznetworks.co.kr<br>
         </address>
         <small class="copyright">
             COPYRIGHT 2014 BY <span class="c-brown">MONOPALACE</span> CO.,LTD ALL RIGHTS RESERVED.
