--- a/monopalace/src/www/inc/_head.html
+++ b/monopalace/src/www/inc/_head.html
@@ -37,21 +37,21 @@
     <!-- iPad icon(Retina) -->
     <link rel="apple-touch-icon" sizes="144x144" href="http://img.monopalace.com/monopalace_icon144x144.png">
 
-    <!-- http://static.entv.co.kr/dien -->
+    <!-- http://static.monopalace.com/ -->
     <!-- fonts -->
     <link rel="stylesheet" href="../static/fonts/notosanskr/notosanskr.css">
     <link rel="stylesheet" href="../static/fonts/nanumgothic/nanumgothic.css">
     <!-- css -->
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/fonts/mdi/css/materialdesignicons.min.css">
-    <!-- <link rel="stylesheet" href="../static/css/libs/slick/slick.css">
-    <link rel="stylesheet" href="../static/css/libs/slick/slick-theme.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/common.min.css"> -->
-    <!-- <link rel="stylesheet" href="../static/css/contents.min.css"> -->
-    <link rel="stylesheet" href="../static/css/libs/prettyPhoto.css">
-    <link rel="stylesheet" href="../static/css/landing/contents.min.css">
+    <link rel="stylesheet" href="http://static.monopalace.com/css/reset.css">
+    <link rel="stylesheet" href="http://static.monopalace.com/fonts/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/libs/slick/slick.css">
+    <link rel="stylesheet" href="http://static.monopalace.com/css/libs/slick/slick-theme.css"> -->
+    <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/common.min.css"> -->
+    <!-- <link rel="stylesheet" href="http://static.monopalace.com/css/contents.min.css"> -->
+    <link rel="stylesheet" href="http://static.monopalace.com/css/libs/prettyPhoto.css">
+    <link rel="stylesheet" href="http://static.monopalace.com/css/landing/contents.min.css">
 
-    <script type="text/javascript" src="../static/js/libs/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="http://static.monopalace.com/js/libs/jquery-1.12.1.min.js"></script>
 
 </head>
 
