--- a/monopalace/src/www/landing/inquiry.html
+++ b/monopalace/src/www/landing/inquiry.html
@@ -17,10 +17,10 @@
                             <a href="#scroll_intro">상품소개</a>
                         </li>
                         <li>
-                            <a href="#scroll_income">분양/임대수익</a>
+                            <a href="#scroll_place">프리미엄 입지환경</a>
                         </li>
                         <li>
-                            <a href="#scroll_place">프리미엄 입지환경</a>
+                            <a href="#scroll_sale">임대수익</a>
                         </li>
                         <li>
                             <a href="#scroll_type">타입 및 특화시설</a>
@@ -203,7 +203,7 @@
             </div>
             <div class="banner-content group-f">
                 <p>망설일 이유 없는 확실한 투자처!</p>
-                <p><span class="c-blue">월세수익 연 500만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,500만원 지급 보증</span></p>
+                <p><span class="c-blue">월세수익 연 480만원 X 5년 동안</span> <span class="c-red-dark">= 총 2,400만원 지급 보증</span></p>
             </div>
         </div>
         <div class="banner-wrapper">
@@ -542,7 +542,7 @@
                             }).render();
                         </script>
                     </div>
-                    <img src="http://img.monopalace.com/map_right.jpg" usemap="#map_right">
+                    <img src="http://img.monopalace.com/landing/inquiry/location/map_right.jpg" usemap="#map_right">
                     <div class="map-info">
                         <map name="map_right" id="map_right">
                             <area shape="rect" coords="60,286,208,321" href="https://map.kakao.com/etc/print.jsp?c=502377.5,911576.25,3&t=m" target="_blank" alt="약도 출력">
@@ -563,7 +563,7 @@
                     <tbody>
                         <tr>
                             <th height="50"><img src="http://img.monopalace.com/mono/dot.gif" alt="dot"> 지하철</th>
-                            <td>지하철 1호선 온양온천역 하차 (1번출구)후 도보 7분 거리 <a href="http://onyangoncheon.station.ne.kr/info.php" target="_blank" title="온양온천역 지하철 시간표 자세히 보기"><img src="http://img.monopalace.com/info/metro_time.jpg" alt="지하철 시간표 자세히보기"></a></td>
+                            <td>지하철 1호선 온양온천역 하차 (1번출구)후 도보 7분 거리 </td>
                         </tr>
                         <tr>
                             <th><img src="http://img.monopalace.com/mono/dot.gif" alt="dot"> 시외버스</th>
@@ -599,86 +599,13 @@
 <!-- /.main.container -->
 
 <div id="footer" class="landing-footer cf">
-    <div id="f_contents" class="cf">
-        <h2><img src="http://img.monopalace.com/footer_logo.gif" alt="모노팰리스"></h2>
-        <p class="address">
-
-            <span class="tel">임대입주문의 041)585-0003 | 충청남도 아산시 온천동 74-5번지<a href="/home/inquiry/" title="임대예약"><img src="http://img.monopalace.com/reser_btn.gif" alt="임대예약" style="margin-top:-2px;margin-left:5px"></a></span><br>
-            대표이사 박기범 | 사업자등록번호 220-87-30865 | TEL 02)6255-3013 | FAX 041)545-0545<br>
-            서울특별시 강남구 테헤란로82길 15, 14층(대치동, 디아이타워) | E-mail <a href="mailto:monopalace@ebiznetworks.co.kr">monopalace@ebiznetworks.co.kr</a><br>
-
+    <div class="footer-area">
+        <h2 class="logo"><img src="http://img.monopalace.com/footer_logo.gif" alt="모노팰리스"></h2>
+        <address class="address">
+            대표이사 박기범 | 사업자등록번호 220-87-30865 | 서울특별시 강남구 테헤란로82길 15, 14층(대치동, 디아이타워)<br>
             COPYRIGHT 2014 BY <span class="footer_mono">MONOPALACE</span> CO.,LTD ALL RIGHTS RESERVED. <br>
-
             <img src="http://img.monopalace.com/footer_text.gif" alt="본 홈페이지에 사용된 투시도 및 이미지 등은 소비자의 이해를 돕기 위한 이미지 컷으로 차이가 있습니다. 하자 등에 대한 피해보상은 주택업 관련 규정에 따라 적용됩니다.">
-        </p>
-        <h3><a href="http://www.ebiznetworks.co.kr/" target="_blank" title="이비즈네트웍스"><img src="http://img.monopalace.com/ebiz_logo.gif" alt="이비즈네트웍스"></a>
-
-        </h3>
-        <!---------------------------family --------------------------->
-        <div id="family_site">
-            <div class="fam_btn_m" style="width:120px; padding:0;">
-                <a href="javascript:;" onclick="$('#family_list').toggle()">
-                    &nbsp;Family Site&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;▲
-                </a>
-            </div>
-            <ul id="family_list" style="width: 120px; display: none;" class="">
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 부동산 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.monotower.com/" target="_blank">모노타워</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><b style="color:#ff0000">모노팰리스</b></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://partners.monopalace.com" target="_blank">모노팰리스 파트너스</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.enasset.co.kr" target="_blank">이엔자산개발</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ditower.co.kr" target="_blank">DI타워</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.onbiz.co.kr/" target="_blank">온비즈 오피스</a></div>
-                </li>
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 커머스 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.nurisoop.co.kr" target="_blank">누리숲</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.entv.co.kr" target="_blank">이엔티비</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ssenflower.co.kr" target="_blank">쎈플라워</a></div>
-                </li>
-                <li style="margin-top:10px;">
-                    <div class="fam_btn" style="font-weight:bold; color:#111111">[ 서비스 ]</div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ancamera.co.kr/home/download_01.html" target="_blank">안카메라</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ancamera.co.kr/home/download_02.html" target="_blank">안캠코더</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.startools.co.kr" target="_blank">별툴즈</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.badakencoder.com" target="_blank">바닥툴즈</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.pcclear.co.kr" target="_blank">피씨클리어</a></div>
-                </li>
-                <li>
-                    <div class="fam_btn"><a href="http://www.ebiznetworks.co.kr" target="_blank">이비즈네트웍스</a></div>
-                </li>
-            </ul>
-        </div>
-        <!---------------------------family --------------------------->
+        </address>
     </div>
 </div>
 
@@ -698,8 +625,8 @@
     <h2 class="logo"><img src="http://img.monopalace.com/landing/inquiry/logo.png" alt="모노팰리스"></h2>
     <ul class="menu">
         <li class="on"><a href="#scroll_intro"><span class="in">상품소개</span></a></li>
-        <li><a href="#scroll_income"><span class="in">분양/임대수익</span></a></li>
         <li><a href="#scroll_place"><span class="in">프리미엄<br>입지환경</span></a></li>
+        <li><a href="#scroll_sale"><span class="in">임대수익</span></a></li>
         <li><a href="#scroll_type"><span class="in">타입 및 특화시설</span></a></li>
         <li><a href="#scroll_plan"><span class="in">지역개발호재</span></a></li>
         <li><a href="#scroll_location"><span class="in">오시는 길</span></a></li>
