--- a/monopalace/src/www/inc/_foot.html
+++ b/monopalace/src/www/inc/_foot.html
@@ -3,14 +3,14 @@
 
 <!-- script -->
 <!-- <script src="https://kit.fontawesome.com/3781a5bb61.js"></script> -->
-<!-- <script src="../static/js/libs/jquery.easing.min.js"></script> -->
-<!-- <script src="../static/js/libs/waypoints.min.js"></script> -->
-<!-- <script src="../static/js/libs/slick.min.js"></script> -->
-<script src="../static/js/libs/jquery.prettyPhoto.js"></script>
+<!-- <script src="http://static.monopalace.com/js/libs/jquery.easing.min.js"></script> -->
+<!-- <script src="http://static.monopalace.com/js/libs/waypoints.min.js"></script> -->
+<!-- <script src="http://static.monopalace.com/js/libs/slick.min.js"></script> -->
+<script src="http://static.monopalace.com/js/libs/jquery.prettyPhoto.js"></script>
 
-<!-- http://static.entv.co.kr/dien -->
-<script type="text/javascript" src="../static/js/script.js"></script>
-<script type="text/javascript" src="../static/js/ui.js"></script>
+<!-- http://static.monopalace.com/ -->
+<script type="text/javascript" src="http://static.monopalace.com/js/script.js"></script>
+<script type="text/javascript" src="http://static.monopalace.com/js/ui.js"></script>
 
 <!--[if lt IE 9]><script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> <![endif]-->
 
