--- a/monopalace/src/www/landing/inquiry.html
+++ b/monopalace/src/www/landing/inquiry.html
@@ -85,7 +85,7 @@
                     <p>충청남도 아산시 온천동 74-5번 (온천대로 1555)</p>
                     <p>
                         <img src="http://img.monopalace.com/landing/inquiry/intro/156.png" alt="모노팰리스 소개이미지" class="img-156">
-                        <span>분양면적 : 45.82㎡(원룸　〮 투베이), 57.73㎡(원룸　〮 투베이)</span>
+                        <span>분양면적 : 45.82㎡(원룸 · 투베이), 57.73㎡(원룸 · 투베이)</span>
                     </p>
                 </div>
                 <table class="info-tbl">
